--- a/index.html
+++ b/index.html
@@ -7,14 +7,42 @@
   <title>Jogo da Memória - Belz Conecta</title>
   <link rel="preload" href="style.css" as="style" />
   <link rel="stylesheet" href="style.css" />
+  <!-- Fontes estilo jogo -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/game-over" rel="stylesheet" />
   <link rel="icon" href="img/img2.png" />
 </head>
 <body>
   <main id="app">
     <!-- Tela inicial -->
   <section id="start-screen" class="screen active" aria-labelledby="titulo-inicial">
-      <h1 id="titulo-inicial" class="visually-hidden">Jogo da Memória Belz Conecta</h1>
-      <button id="start-btn" class="btn primary pulse" aria-label="Iniciar jogo">Jogar</button>
+      <div class="start-panel" role="group" aria-describedby="descricao-jogo">
+  <h1 id="titulo-inicial" class="game-title" aria-label="Jogo da Memória Belz Conecta">
+             <span class="brand-belz" aria-hidden="true">JOGO DA MEMORIA</span>
+          </h1>
+        <p id="descricao-jogo" class="tagline">Encontre todos os pares antes que o tempo acabe.</p>
+        <div class="options-row">
+          <div class="field">
+            <label for="difficulty-select">Dificuldade</label>
+            <select id="difficulty-select" aria-label="Selecionar dificuldade">
+              <option value="facil">Fácil (4x3)</option>
+              <option value="medio" selected>Médio (5x4)</option>
+              <option value="dificil">Difícil (6x5)</option>
+            </select>
+          </div>
+          <!-- Checkbox de verso único removido -->
+        </div>
+        <div class="buttons">
+          <button id="start-btn" class="btn primary pulse blob-btn" aria-label="Iniciar jogo">
+            <span class="blob b1"></span>
+            <span class="blob b2"></span>
+            <span class="blob b3"></span>
+            <span class="blob b4"></span>
+            <span class="label">Jogar</span>
+          </button>
+        </div>
+        <p class="howto-inline">Vire duas cartas para formar pares. Complete todos antes do tempo acabar. A dificuldade ajusta o tamanho do tabuleiro.</p>
+      </div>
     </section>
 
     <!-- Tela do jogo -->
@@ -27,6 +55,7 @@
               <span id="timer" class="timer-text">Tempo: 60</span>
             </div>
             <div class="status" id="pairs-status" aria-label="Pares encontrados"></div>
+            <button id="end-btn" class="mini-btn end-game-btn" aria-label="Encerrar jogo antecipadamente">Encerrar</button>
           </header>
           <div id="game-board" class="game-board" role="grid" aria-label="Cartas do jogo"></div>
         </div>
