Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.webmanifest" />
   <!-- Fontes estilo jogo -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet" />
   <link href="https://fonts.cdnfonts.com/css/game-over" rel="stylesheet" />
   <link rel="icon" href="img/img2.png" />
 </head>
@@ -27,17 +27,7 @@
              <span class="brand-belz" aria-hidden="true">JOGO DA MEMÓRIA</span>
           </h1>
         <p id="descricao-jogo" class="tagline">Encontre todos os pares antes que o tempo acabe! </p>
-        <div class="options-row">
-          <div class="field">
-            <label for="difficulty-select">Dificuldade</label>
-            <select id="difficulty-select" aria-label="Selecionar dificuldade">
-              <option value="facil">Fácil (4x3)</option>
-              <option value="medio" selected>Médio (5x4)</option>
-              <option value="dificil">Difícil (6x5)</option>
-            </select>
-          </div>
-          <!-- Checkbox de verso único removido -->
-        </div>
+  <!-- Seção de dificuldade removida (apenas configuração fixa média) -->
         <div class="buttons">
           <button id="start-btn" class="btn primary pulse blob-btn" aria-label="Iniciar jogo">
             <span class="blob b1"></span>
@@ -49,10 +39,10 @@
         </div>
         <div class="howto-inline" role="group" aria-label="Instruções do jogo">
           <ul class="howto-list compact">
-            <li>1. Escolha dificuldade</li>
-            <li>2. Vire 2 cartas</li>
-            <li>3. Forme pares</li>
-            <li>4. Antes do tempo!</li>
+            <li>1. Vire uma carta</li>
+            <li>2. Vire outra carta</li>
+            <li>3. Forme os pares</li>
+            <li>4. Termine antes do tempo!</li>
           </ul>
         </div>
       </div>
