feat: adiciona responsividade e escala dinâmica aos painéis do jogo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main id="app">
     <!-- Tela inicial -->
   <section id="start-screen" class="screen active" aria-labelledby="titulo-inicial">
-      <div class="start-panel" role="group" aria-describedby="descricao-jogo">
+  <div class="start-panel scalable-panel" role="group" aria-describedby="descricao-jogo">
   <h1 id="titulo-inicial" class="game-title" aria-label="Jogo da Memória Belz Conecta">
              <span class="brand-belz" aria-hidden="true">JOGO DA MEMÓRIA</span>
           </h1>
@@ -67,7 +67,7 @@
 
   <!-- Tela final -->
   <section id="end-screen" class="screen" aria-labelledby="end-message">
-  <div class="end-box slide-up">
+  <div class="end-box slide-up scalable-panel">
         <h2 id="end-message" class="end-message"></h2>
         <div class="stats" id="final-stats"></div>
         <button id="restart-btn" class="btn secondary" aria-label="Jogar novamente">Jogar Novamente</button>
